[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ["py36"]

[tool.isort]
profile = "black"
line_length = 100
combine_as_imports = true
include_trailing_comma = true

[tool.mypy]
ignore_missing_imports = true
exclude = [
    # Exclude the stub operation file so the actual operation.py gets type checked
    # by default with mypy. There are extra tests (see check-operation-stub-typing.sh)
    # that cover this file specifically.
    "operation.pyi",
]
