[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ["py36"]

[tool.isort]
profile = "black"
line_length = 100
combine_as_imports = true
include_trailing_comma = true

[tool.mypy]
check_untyped_defs = true
ignore_missing_imports = true
enable_incomplete_feature = "Unpack"
files = "pyinfra,pyinfra_cli"
